first markup version

--- a/index.html
+++ b/index.html
@@ -1,45 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Single-page design portfolio</title>
-</head>
-<body>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/favicon-32x32.png"
+    />
 
-  Free Consultation
+    <title>Frontend Mentor | Single-page design portfolio</title>
+  </head>
+  <body>
+    <div class="header">
+      <img src="assets/logo.svg" class="logo" /><button class="black">
+        Free Consultation
+      </button>
+    </div>
 
-  Design solutions made easy
+    <div class="introduction">
+      Design solutions made easy With over ten years of experience in various
+      design disciplines, I’m your one-stop shop for your design needs.
+    </div>
+    <div class="index">
+      <div class="index__item">Graphic Design</div>
+      <div class="index__item">UI/UX</div>
+      <div class="index__item">Apps</div>
+      <div class="index__item">Photography</div>
+      <div class="index__item">Illustrations</div>
+      <div class="index__item">Motion Graphics</div>
+    </div>
+    <img class="creator-picture" src="" alt="" />
+    <div class="presentation">
+      <h2>I’m Amy, and I’d love to work on your next project</h2>
+      <p class="presentation__description">
+        I love working with others to create beautiful design solutions. I’ve
+        designed everything from brand illustrations to complete mobile apps.
+        I’m also handy with a camera!
+      </p>
+      <button>Free Consultation</button>
+    </div>
 
-  With over ten years of experience in various design disciplines, I’m your one-stop shop for your design needs.
-
-  Graphic Design
-  UI/UX
-  Apps
-  Photography
-  Illustrations
-  Motion Graphics
-
-  I’m Amy, and I’d love to work on your next project
-
-  I love working with others to create beautiful design solutions. I’ve designed everything from brand illustrations 
-  to complete mobile apps. I’m also handy with a camera!
-
-  Free Consultation
-
-  My Work
-
-  Book a call with me
-
-  I’d love to have a chat to see how I can help you. The best first step is for us to discuss your project during a 
-  free consultation. Then we can move forward from there.
-
-  Free Consultation
-
-  Free Consultation
-
-</body>
+    <div class="slider">My Work</div>
+    <div class="panel">
+      <h2>Book a call with me</h2>
+      <p>
+        I’d love to have a chat to see how I can help you. The best first step
+        is for us to discuss your project during a free consultation. Then we
+        can move forward from there.
+      </p>
+      <button>Free Consultation</button>
+    </div>
+    <footer>
+      <img class="logo" src="assets/logo.svg" alt="" /><button class="black">
+        Free Consultation
+      </button>
+    </footer>
+  </body>
 </html>
