first half mobile layout finished

--- a/index.html
+++ b/index.html
@@ -12,51 +12,96 @@
     />
 
     <title>Frontend Mentor | Single-page design portfolio</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="header">
-      <img src="assets/logo.svg" class="logo" /><button class="black">
-        Free Consultation
-      </button>
-    </div>
-
-    <div class="introduction">
-      Design solutions made easy With over ten years of experience in various
-      design disciplines, I’m your one-stop shop for your design needs.
-    </div>
-    <div class="index">
-      <div class="index__item">Graphic Design</div>
-      <div class="index__item">UI/UX</div>
-      <div class="index__item">Apps</div>
-      <div class="index__item">Photography</div>
-      <div class="index__item">Illustrations</div>
-      <div class="index__item">Motion Graphics</div>
-    </div>
-    <img class="creator-picture" src="" alt="" />
-    <div class="presentation">
-      <h2>I’m Amy, and I’d love to work on your next project</h2>
-      <p class="presentation__description">
-        I love working with others to create beautiful design solutions. I’ve
-        designed everything from brand illustrations to complete mobile apps.
-        I’m also handy with a camera!
-      </p>
-      <button>Free Consultation</button>
-    </div>
-
-    <div class="slider">My Work</div>
-    <div class="panel">
-      <h2>Book a call with me</h2>
-      <p>
-        I’d love to have a chat to see how I can help you. The best first step
-        is for us to discuss your project during a free consultation. Then we
-        can move forward from there.
-      </p>
-      <button>Free Consultation</button>
-    </div>
-    <footer>
-      <img class="logo" src="assets/logo.svg" alt="" /><button class="black">
-        Free Consultation
-      </button>
-    </footer>
+    <main>
+      <div class="header">
+        <img src="assets/logo.svg" class="logo" />
+        <button class="black">Free Consultation</button>
+      </div>
+      <div class="introduction">
+        <h1>Design solutions made easy</h1>
+        <p>
+          With over ten years of experience in various design disciplines, I’m
+          your one-stop shop for your design needs.
+        </p>
+      </div>
+      <div class="index">
+        <div class="index__item">
+          <div>
+            <img
+              src="assets/pattern-graphic-design.svg"
+              alt="Enumeration item: graphic design"
+            />
+          </div>
+          <span>Graphic Design</span>
+        </div>
+        <div class="index__item">
+          <div>
+            <img src="assets/pattern-ui-ux.svg" alt="Enumeration item: UI" />
+          </div>
+          <span>UI/UX</span>
+        </div>
+        <div class="index__item">
+          <div>
+            <img src="assets/pattern-apps.svg" alt="Enumeration item: Apps" />
+          </div>
+          <span>Apps</span>
+        </div>
+        <div class="index__item">
+          <div>
+            <img
+              src="assets/pattern-photography.svg"
+              alt="Enumeration item: Photography"
+            />
+          </div>
+          <span>Photography</span>
+        </div>
+        <div class="index__item">
+          <div>
+            <img
+              src="assets/pattern-illustrations.svg"
+              alt="Enumeration item: Illustrations"
+            />
+          </div>
+          <span>Illustrations</span>
+        </div>
+        <div class="index__item">
+          <div>
+            <img
+              src="assets/pattern-motion-graphics.svg"
+              alt="Enumeration item: Motion Graphics"
+            />
+          </div>
+          <span>Motion Graphics</span>
+        </div>
+      </div>
+      <img class="creator-picture" src="" alt="" />
+      <div class="presentation">
+        <h2>I’m Amy, and I’d love to work on your next project</h2>
+        <p class="presentation__description">
+          I love working with others to create beautiful design solutions. I’ve
+          designed everything from brand illustrations to complete mobile apps.
+          I’m also handy with a camera!
+        </p>
+        <button>Free Consultation</button>
+      </div>
+      <div class="slider">My Work</div>
+      <div class="panel">
+        <h2>Book a call with me</h2>
+        <p>
+          I’d love to have a chat to see how I can help you. The best first step
+          is for us to discuss your project during a free consultation. Then we
+          can move forward from there.
+        </p>
+        <button>Free Consultation</button>
+      </div>
+      <footer>
+        <img class="logo" src="assets/logo.svg" alt="" /><button class="black">
+          Free Consultation
+        </button>
+      </footer>
+    </main>
   </body>
 </html>
