mobile almost finished

--- a/index.html
+++ b/index.html
@@ -77,7 +77,13 @@
           <span>Motion Graphics</span>
         </div>
       </div>
-      <img class="creator-picture" src="" alt="" />
+      <div class="picture-container">
+        <img
+          class="profile-picture"
+          src="assets/image-amy.webp"
+          alt="A picture of Amy, the author of the webpage"
+        />
+      </div>
       <div class="presentation">
         <h2>I’m Amy, and I’d love to work on your next project</h2>
         <p class="presentation__description">
@@ -87,7 +93,20 @@
         </p>
         <button>Free Consultation</button>
       </div>
-      <div class="slider">My Work</div>
+      <h2>My Work</h2>
+      <div class="carousel">
+        <div class="slider">
+          <img src="assets/image-slide-1.jpg" alt="" />
+          <img src="assets/image-slide-2.jpg" alt="" />
+          <img src="assets/image-slide-3.jpg" alt="" />
+          <img src="assets/image-slide-4.jpg" alt="" />
+          <img src="assets/image-slide-5.jpg" alt="" />
+        </div>
+        <div class="slider-control">
+          <div class="btn left"></div>
+          <div class="btn right"></div>
+        </div>
+      </div>
       <div class="panel">
         <h2>Book a call with me</h2>
         <p>
