--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <main>
       <div class="header">
         <img src="assets/logo.svg" class="logo" />
-        <button class="black">Free Consultation</button>
+        <button class="btn">Free Consultation</button>
       </div>
       <div class="introduction">
         <h1>Design solutions made easy</h1>
@@ -91,7 +91,7 @@
           designed everything from brand illustrations to complete mobile apps.
           I’m also handy with a camera!
         </p>
-        <button>Free Consultation</button>
+        <button class="btn">Free Consultation</button>
       </div>
       <h2>My Work</h2>
       <div class="carousel">
@@ -103,8 +103,8 @@
           <img src="assets/image-slide-5.jpg" alt="" />
         </div>
         <div class="slider-control">
-          <div class="btn left"></div>
-          <div class="btn right"></div>
+          <div class="round-btn left"></div>
+          <div class="round-btn right"></div>
         </div>
       </div>
       <div class="panel">
@@ -114,10 +114,11 @@
           is for us to discuss your project during a free consultation. Then we
           can move forward from there.
         </p>
-        <button>Free Consultation</button>
+        <button class="btn">Free Consultation</button>
       </div>
       <footer>
-        <img class="logo" src="assets/logo.svg" alt="" /><button class="black">
+        <img class="logo" src="assets/logo.svg" alt="" />
+        <button class="btn">
           Free Consultation
         </button>
       </footer>
