--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <title>Frontend Mentor | Single-page design portfolio</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="app.js"></script>
   </head>
   <body>
     <main>
