Tablet layout finished

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
         <div class="index__item">
           <div>
             <img
-              src="assets/pattern-graphic-design.svg"
+           class="img"   
+            src="assets/pattern-graphic-design.svg"
               alt="Enumeration item: graphic design"
             />
           </div>
@@ -40,13 +41,19 @@
         </div>
         <div class="index__item">
           <div>
-            <img src="assets/pattern-ui-ux.svg" alt="Enumeration item: UI" />
+            <img src="assets/pattern-ui-ux.svg" 
+              class="img"
+            alt="Enumeration item: UI" />
           </div>
           <span>UI/UX</span>
         </div>
         <div class="index__item">
           <div>
-            <img src="assets/pattern-apps.svg" alt="Enumeration item: Apps" />
+            <img
+              src="assets/pattern-apps.svg"
+              class="img"
+              alt="Enumeration item: Apps"
+            />
           </div>
           <span>Apps</span>
         </div>
@@ -55,6 +62,7 @@
             <img
               src="assets/pattern-photography.svg"
               alt="Enumeration item: Photography"
+              class="img"
             />
           </div>
           <span>Photography</span>
@@ -64,6 +72,7 @@
             <img
               src="assets/pattern-illustrations.svg"
               alt="Enumeration item: Illustrations"
+              class="img"
             />
           </div>
           <span>Illustrations</span>
@@ -72,27 +81,31 @@
           <div>
             <img
               src="assets/pattern-motion-graphics.svg"
+              class="img"
               alt="Enumeration item: Motion Graphics"
             />
           </div>
           <span>Motion Graphics</span>
         </div>
       </div>
-      <div class="picture-container">
-        <img
-          class="profile-picture"
-          src="assets/image-amy.webp"
-          alt="A picture of Amy, the author of the webpage"
-        />
-      </div>
-      <div class="presentation">
-        <h2>I’m Amy, and I’d love to work on your next project</h2>
-        <p class="presentation__description">
-          I love working with others to create beautiful design solutions. I’ve
-          designed everything from brand illustrations to complete mobile apps.
-          I’m also handy with a camera!
-        </p>
-        <button class="btn">Free Consultation</button>
+
+      <div class="details">
+        <div class="picture-container">
+          <img
+            class="profile-picture"
+            src="assets/image-amy.webp"
+            alt="A picture of Amy, the author of the webpage"
+          />
+        </div>
+        <div class="presentation">
+          <h2>I’m Amy, and I’d love to work on your next project</h2>
+          <p class="presentation__description">
+            I love working with others to create beautiful design solutions.
+            I’ve designed everything from brand illustrations to complete mobile
+            apps. I’m also handy with a camera!
+          </p>
+          <button class="btn">Free Consultation</button>
+        </div>
       </div>
       <h2>My Work</h2>
       <div class="carousel">
@@ -119,9 +132,7 @@
       </div>
       <footer>
         <img class="logo" src="assets/logo.svg" alt="" />
-        <button class="btn">
-          Free Consultation
-        </button>
+        <button class="btn">Free Consultation</button>
       </footer>
     </main>
   </body>
