finish desktop layout

--- a/index.html
+++ b/index.html
@@ -31,9 +31,8 @@
       <div class="index">
         <div class="index__item">
           <div>
-            <img
-           class="img"   
-            src="assets/pattern-graphic-design.svg"
+            <img class="img"
+              src="assets/pattern-graphic-design.svg"
               alt="Enumeration item: graphic design"
             />
           </div>
@@ -42,18 +41,15 @@
         <div class="index__item">
           <div>
             <img src="assets/pattern-ui-ux.svg" 
-              class="img"
-            alt="Enumeration item: UI" />
+            class="img" alt="Enumeration item: UI" />
           </div>
           <span>UI/UX</span>
         </div>
         <div class="index__item">
           <div>
-            <img
-              src="assets/pattern-apps.svg"
-              class="img"
-              alt="Enumeration item: Apps"
-            />
+            <img src="assets/pattern-apps.svg"
+            class="img" 
+            alt="Enumeration item: Apps" />
           </div>
           <span>Apps</span>
         </div>
@@ -100,14 +96,13 @@
         <div class="presentation">
           <h2>I’m Amy, and I’d love to work on your next project</h2>
           <p class="presentation__description">
-            I love working with others to create beautiful design solutions.
-            I’ve designed everything from brand illustrations to complete mobile
-            apps. I’m also handy with a camera!
+            I love working with others to create beautiful design solutions. I’ve
+            designed everything from brand illustrations to complete mobile apps.
+            I’m also handy with a camera!
           </p>
           <button class="btn">Free Consultation</button>
         </div>
-      </div>
-      <h2>My Work</h2>
+      </div>     <h2>My Work</h2>
       <div class="carousel">
         <div class="slider">
           <img src="assets/image-slide-1.jpg" alt="" />
@@ -128,11 +123,13 @@
           is for us to discuss your project during a free consultation. Then we
           can move forward from there.
         </p>
-        <button class="btn">Free Consultation</button>
+        <div><button class="btn">Free Consultation</button></div>
       </div>
       <footer>
         <img class="logo" src="assets/logo.svg" alt="" />
-        <button class="btn">Free Consultation</button>
+        <button class="btn">
+          Free Consultation
+        </button>
       </footer>
     </main>
   </body>
